ckanext/who_afro/assets/css/who-afro.css
/* ... */
.insight-square {
    background-color: white;
    padding: 16px;
    border-radius: 8px;
    min-height: 297px;
    margin-bottom: 48px;
}


.insight-square p, .insight-rect p span:first-child {
    color: var(--primary-navy);
    font-weight: 700;
    font-size: 18px;
    line-height: 24px;
}

.insight-rect p span:nth-child(2) {
    color: var(--primary-navy);
    font-weight: 700;
    font-size: 14px;
}

.insight-square p a span, .insight-rect p a span:last-child {
    float: right;
    color: var(--secondary-who-blue);
}

.insight-img-container {
    padding: 18px;
}

.insight-img-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.insight-rect img {
    object-fit: cover;
}

.insight-rect {
    background-color: white;
    padding: 16px;
    border-radius: 8px;
    height: 354px;
}

.insight-small-rect {
    background-color: white;
    padding: 19px;
    border-radius: 8px;
    min-height: 101px;
}

.data-hub-stats {
    margin-top: 48px;
    height: 374px;
}

.insight-small-rect p:first-child {
    color: var(--primary-navy);
    font-weight: 700;
    font-size: 18px;
    line-height: 24px;
}

@media only screen and (min-width: 991px) {
    .data-hub-stats {
        margin-top: 0;
        margin-left: 24px;
        width: calc(50% - 24px);
        height: 374px;
    }
}

@media only screen and (min-width: 576px) {
    .insight-small-rect:last-child {
        margin-left: 24px;
        width: calc(50% - 24px);
    }
}

.recently-updated .container {
    margin-top: 64px;
}

@media only screen and (max-width: 575px) {
    .data-hub-stats H3 {
        margin-top: 0;
    }
    .data-hub-stats {
        margin-top: 32px;
    }
    .recently-updated .container {
        margin-top: 32px;
    }

    .insights {
        padding-bottom: 0;
        padding-top: 32px;
    }
    .insight-small-rect:last-child {
        margin-top: 24px;
    }
    .insights .container {
        min-height: 1750px;
    }

}

.number-with-arrows span {
    color: var(--primary-navy);
    font-weight: 400;
    font-size: 36px;
}

.data-hub-stats .row {
    margin-bottom:  24px;
}

.insight-square {
    margin-right: 24px;
    width: calc(33.3% - 24px) ;
}
.insight-square:last-child {
    margin-right: 0;
    width: calc(33.3%);
}

@media only screen and (max-width: 575px) {
    .row.insight-row {
        display: block;
    }
    .insight-square, .insight-square:last-child {
        margin-right: 0;
        margin-bottom: 32px;
        width: 100%;
        height: 100%;
    }
    .after-insights {
        padding-top: 85%;
        background: var(--who-blue-ten-percent);
        min-height: 418px;
    }
}

.category-box {
    background: #FFFFFF;
    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.04);
    border-radius: 4px;
    margin-bottom: 24px;
    padding:  20px;
    height:  110px;
}

.category-box .group-thumbnail {
    float:  left;
    display: inline-block;
    vertical-align: middle;
    max-height: 70px;
    margin-right: 20px;
}

.category-box .group-text {
    vertical-align: middle;
    width:  100%;
}
.category-box .group-text .title{
    font-weight: 700;
    font-size: 16px;
    line-height: 24px;
    color: #008dc9;
}

.category-box .group-text .desc{
    font-weight: 400;
    font-size: 14px;
    line-height: 20px;
    color: #212121;
    overflow:  hidden;
    height:  50px;
}

.category-box .btn-delete {
    background: transparent;
    color: #008dc9;
    font-size: 20px;
    padding: 20px;
    position: absolute;
    bottom: 10px;
    right: 10px;
}

/* tags margin */
.dataset-resources {
    list-style-type: none;
    padding-left: 0;
    flex-direction: column;
    align-items: center;

}

.dataset-resources li {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    padding: 2px 6px;
    background: var(--who-blue-ten-percent);
    border-radius: 4px;
    margin-left: 0;
    margin-right: 8px;
    margin-bottom: 24px;
    letter-spacing: 0.1em;
    text-transform: uppercase;
    border: none;
}

.dataset-resources li a.badge,
.dataset-resources li a.badge:hover {
    display: inline-block;
    background-color: transparent;
    color: var(--secondary-who-blue);
    text-decoration: none;
    border-radius: 4px;
}
/* end tags margin */

a.tag,
a.tag:hover  {
    padding: 2px 6px;
    background: #fff1e9;
    border-radius: 4px;
    margin-right: 10px;
    margin-bottom: 24px;
    letter-spacing: 0.1em;
    text-transform: uppercase;
    border:  none;
    color: #056839;
    box-shadow:  none;
}

.tag-list{
    background:  transparent;
    border:  none;
}

.recently-updated H2 {
    font-weight: 400;
    font-size: 36px;
    line-height: 48px;
    color: var(--primary-navy);
    letter-spacing: -0.01em;
    margin-bottom: 48px;
    margin-left: 0;
    margin-top: 64px;
}

.recently-updated H3 span:first-child {
    color: var(--primary-navy);
    font-weight: 400;
    font-size: 28px;
    line-height: 36px;

}

.recently-updated H3 {
    margin-top: 48px;
    margin-bottom: 24px;
}

@media only screen and (max-width: 559px) {
    .recently-updated H3 {
        margin-top: 32px;
        margin-bottom: 24px;
    }
}

.recently-updated {
    padding-bottom:64px;
}

.dataset-content {
    margin-right: 24px;
    margin-bottom: 20px;
}

.dataset-item {
    list-style:  none;
}

.homepage-package-list .dataset-item {
    list-style:  none;
    border: var(--primary-navy) solid 1px;
    border-radius: 8px;
    padding: 24px;
}

.dataset-content .dataset-heading {
    font-weight: 700;
    font-size: 18px;
    line-height: 24px;
    margin:  10px 0px;
}

.homepage-package-list .dataset-content .dataset-heading {
    color: var(--primary-navy);
}

.dataset-content .author {
    font-weight: 700;
    font-size: 14px;
    line-height: 20px;
    color: #212121;
    margin-bottom: 0px;
}

.dataset-content .modified {
    font-weight: 400;
    font-size: 12px;
    line-height: 20px;
    color: var(--primary-navy);
    padding-bottom: 12px;
}
/* ... */

